# This file documents the revision history for Perl extension Catalyst.

  Bug fixes:
        -  Revert change to URL encode things passed into $c->uri_for
           Args and CaptureArgs as this causes breakage to pre-existing
           applications.
        -  Remove use of Test::MockObject as it doesn't install from CPAN
           in some environments.

5.80005 2009-06-06 14:40:00

  Behaviour changes:
        - Arguments ($c->req->args) in Chained dispatch are now automatically
          URL decoded to be consistent with Local/Path dispatch (Caelum)

  Documentation:
        - Clarify correct techniques for Moose controllers (domm)

  Bug fixes:
        - Further change pushing 'env' attribute down into Catalyst::Engine
          to make $c->engine->env work in all cases (kmx)
        - Also fix $c->engine->env in Catalyst::Test tests (kmx)
          - Tests for this (t0m)
        - Fix Catalyst failing to start if any plugin changed $_ whilst
          loading (t0m)
          - Tests for this
        - Be stricter about arguments to Args attributes for Chained actions,
          so that they blow up on load instead of causing undefined behavior
          later on (hdp)
          - Tests for this
        - Prefer Path actions with a smaller (or set) number of Args (caelum)
          Bug reported here: http://stackoverflow.com/questions/931653/catalyst-action-that-matches-a-single-file-in-the-root-directory/933181#933181
          - Tests for this

   New features:
        - Add $c->req->remote_user to disambiguate from $c->req->user (dwc)
        - Require MooseX::MethodAttributes 0.12 so that action methods
          (with attributes) can be used in / composed from Moose roles.
        - Allow the generation of cookies with the HTTPOnly flag set
          in Catalyst::Engine (kmx)

5.80004 2009-05-18 17:03:23
        - Rename the actions attribute in Catalyt::Controller to
          _controller_actions to avoid name clashes with application